# CodenamePaste

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Jenkinsfile  README.md  anal.sh  azure-pipelines.yml  build.sh  sonarqube.properties  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
ext/: deps.cmake
include/: Hack.h
include/Classes/: CBaseEntity.h  CBaseHandle.h  CUserCmd.h  IEntity.h
include/Classes/NetVarStuff/: ClientClass.h  RecvProp.h  RecvTable.h
include/Hooks/: hkCreateMove.h  hkFrameStageNotify.h
include/Interfaces/: IEngineClient.h  VClient018.h  VClientEntityList003.h  VClientMode.h  VEngineClient014.h
include/Managers/: IManager.h
include/Managers/Hooking/: HookingManager.h
include/Managers/Interfaces/: InterfaceManager.h
include/Managers/Modules/: IModule.h  Module.h  ModuleManager.h
include/Managers/NetVars/: NetvarManager.h
include/Managers/Offsets/: IOffsetManager.h  OffsetManager.h
include/Modules/: AntiFlash.h  BunnyHop.h  Radar.h
include/Utils/: MathHelper.h  Matrix3x4.h  QAngle.h  VMTManager.h  Vector.h
src/: CMakeLists.txt  Hack.cpp  MainEntry.cpp
src/Classes/: CBaseEntity.cpp
src/Hooks/: hkCreateMove.cpp  hkFrameStageNotify.cpp
src/Managers/Hooking/: HookingManager.cpp
src/Managers/Interfaces/: InterfaceManager.cpp
src/Managers/Modules/: Module.cpp  ModuleManager.cpp
src/Managers/NetVars/: NetVarManager.cpp
src/Managers/Offsets/: OffsetManager.cpp
src/Modules/: AntiFlash.cpp  BunnyHop.cpp  Radar.cpp
src/Utils/: MathHelper.cpp  QAngle.cpp  Vector.cpp
test/: CMakeLists.txt  TestInterfaceManager.cpp  TestMainFile.cpp  TestVMTManager.cpp  TestVector.cpp
test/Managers/: TestHookingManager.cpp  TestOffsetManager.cpp
test/Utils/: TestMathHelper.cpp  TestQAngle.cpp  TestVMTManager.cpp  TestVector.cpp
